2026-01-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-handle-file-name-all-completions):
	Keep `tramp-default-method{-alist}' in order to get completion
	functions for `tramp-default-method-marker'.

2025-12-31  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.8.1 released

2025-12-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-adb.el (tramp-adb-do-ls): New function.
	(tramp-adb-handle-file-attributes)
	(tramp-adb-handle-directory-files-and-attributes)
	(tramp-adb-handle-file-name-all-completions): Use it.  (Bug#80054)

2025-12-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-handle-expand-file-name):
	Expand FILENAME also when it is absolute.  (Bug#80031)

2025-12-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-handle-make-process): Suppress lock files.

2025-12-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-handle-make-process): Handle error buffer.

2025-12-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-handle-make-process)
	(tramp-smb-handle-process-file): Handle STDERR file.
	(tramp-smb-call-winexe): Regroup sent commands.

2025-12-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-file-name-handler-alist):
	Use `tramp-smb-handle-make-process', `tramp-smb-handle-shell-command'
	and `tramp-handle-start-file-process'.
	(tramp-smb-matching-line): New defvar.
	(tramp-smb-handle-make-process, tramp-smb-handle-shell-command)
	(tramp-smb-shell-prompt): New defuns.
	(tramp-smb-handle-process-file): Rewrite.
	(tramp-smb-handle-start-file-process): Remove.
	(tramp-smb-get-localname, tramp-smb-shell-quote-localname):
	New optional argument SHARE.
	(tramp-smb-send-command): Remove echoed command string.
	(tramp-smb-maybe-open-connection): Initialize variables.
	(tramp-smb-wait-for-output): Wait more robust.
	(tramp-smb-call-winexe): Check for share.  Goto current directory.